Fix the menu width on small screens

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -194,7 +194,7 @@ select option:disabled {
 @media (max-width: 799px) {
   .details-page-menu, .page-content-menu, .docs-menu {
     position: inherit;
-    width: 50em;
+    width: 25em;
     padding: 0.5em;
   }
   .small-logo-visible img {
